--- a/molly/maps/templates/maps/map_elements.html
+++ b/molly/maps/templates/maps/map_elements.html
@@ -1,11 +1,11 @@
 {% if zoom_controls %}
     {% ifnotequal zoom 10 %}
-        <a class="no-icon zoom-out" href="?zoom={{ map.zoom|add:"-1" }}" rel="nofollow">
+        <a class="no-icon zoom-out zoomOut" href="?zoom={{ map.zoom|add:"-1" }}" rel="nofollow">
             <img src="{{ MEDIA_URL }}site/png/icons/zoom-out.png" alt="Zoom out"/>
         </a>
     {% endifnotequal %}
     {% ifnotequal zoom 18 %}
-        <a class="no-icon zoom-in" href="?zoom={{ map.zoom|add:"1" }}" rel="nofollow">
+        <a class="no-icon zoom-in zoomIn" href="?zoom={{ map.zoom|add:"1" }}" rel="nofollow">
             <img src="{{ MEDIA_URL }}site/png/icons/zoom-in.png" alt="Zoom in"/>
         </a>
     {% endifnotequal %}
