Embed slippy maps into pages as needed (markers aren't completely working yet)

--- a/molly/maps/templates/maps/touchmaplite/map.html
+++ b/molly/maps/templates/maps/touchmaplite/map.html
@@ -19,6 +19,7 @@
         {% compressed_js "touchMapLite-touchMapLite" %}
         {% compressed_js "touchMapLite-touchMapLite.tileUrlProvider.OSM" %}
         {% compressed_js "touchMapLite-touchMapLite.marker" %}
+        {% compressed_js "touchMapLite-touchMapLite.permalink.OSM" %}
         <script type="text/javascript"> 
             // <![CDATA[
             
