--- a/molly/maps/templates/maps/embed.html
+++ b/molly/maps/templates/maps/embed.html
@@ -1,7 +1,13 @@
+{% load portal_misc %}
 {% ifnotequal style_group "groups-dumb" %}
-    <div class="backgrounded-image" style="background-image:url('{% url maps:osm-generated_map map.static_map_hash %}'); height:{{ map.height }}px">
-        {% include "maps/map_elements.html" %}
-    </div>
+    {% if device|device_has_parent:"generic_web_browser" or device.pointing_method == "touchscreen" and use_javascript %}
+        <iframe width="{{ map.width }}" height="{{ map.height }}" frameborder="0"
+                src="{% url maps:touchmaplite %}?{{ map.slippy_map_parameters }}"></iframe>
+    {% else %}
+        <div class="backgrounded-image" style="background-image:url('{% url maps:osm-generated_map map.static_map_hash %}'); height:{{ map.height }}px">
+            {% include "maps/map_elements.html" %}
+        </div>
+    {% endif %}
 {% else %}
     <img src="{% url maps:osm-generated_map map.static_map_hash %}" alt="Map"><br />
     {% include "maps/map_elements.html" %}
