--- a/demos/molly_oxford/site_media/touchmaplite/css/touchMapLite/viewer.css
+++ b/demos/molly_oxford/site_media/touchmaplite/css/touchMapLite/viewer.css
@@ -57,9 +57,10 @@ body {
 
 #viewer #markers .marker img {
 	position: absolute;
-	top: -20px;
-	width: 17px;
-	height: 19px;
+	top: -25px;
+	left: -10px;
+	width: 20px;
+	height: 25px;
 	display: block;
 }
 
