Add a strip down the side so people can scroll

--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -984,3 +984,9 @@ small {
     background-position: center center;
     margin-right: 5px;
 }
+
+.slippy-map
+{
+    text-align: center;
+    padding-right: 40px;
+}
