Add a background texture to the maps

--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -988,5 +988,6 @@ small {
 .slippy-map
 {
     text-align: center;
-    padding-right: 40px;
+    padding-right: 60px;
+    background-image: url('../../../maps/png/scroll-texture.png');
 }
