Add borders to maps

--- a/demos/molly_oxford/site_media/site/css/groups/smart.css
+++ b/demos/molly_oxford/site_media/site/css/groups/smart.css
@@ -989,5 +989,9 @@ small {
 {
     text-align: center;
     padding-right: 60px;
-    background-image: url('../../../maps/png/scroll-texture.png');
+}
+
+.map
+{
+    border: 1px solid #000000;
 }
