--- a/molly/maps/templates/maps/embed.html
+++ b/molly/maps/templates/maps/embed.html
@@ -2,15 +2,15 @@
 {% ifnotequal style_group "groups-dumb" %}
     {% if device|device_has_parent:"generic_web_browser" or device.pointing_method == "touchscreen" and use_javascript %}
         <div class="slippy-map">
-            <iframe width="{{ map.width|add:"-60" }}" height="{{ map.height }}" frameborder="0"
+            <iframe width="{{ map.width|add:"-60" }}" height="{{ map.height }}" frameborder="0" class="map"
                     src="{% url maps:touchmaplite %}?{{ map.slippy_map_parameters }}"></iframe>
         </div>
     {% else %}
-        <div class="backgrounded-image" style="background-image:url('{% url maps:osm-generated_map map.static_map_hash %}'); height:{{ map.height }}px">
+        <div class="backgrounded-image map" style="background-image:url('{% url maps:osm-generated_map map.static_map_hash %}'); height:{{ map.height }}px">
             {% include "maps/map_elements.html" %}
         </div>
     {% endif %}
 {% else %}
-    <img src="{% url maps:osm-generated_map map.static_map_hash %}" alt="Map"><br />
+    <img src="{% url maps:osm-generated_map map.static_map_hash %}" alt="Map" class="map"><br />
     {% include "maps/map_elements.html" %}
 {% endifnotequal %}
