--- a/molly/apps/contact/templates/contact/search_form.html
+++ b/molly/apps/contact/templates/contact/search_form.html
@@ -1,6 +1,7 @@
 {# Search form #}
 
 <div class="section">
+<div class="header">
   <div class="form">
   <form method="get" action="{% url contact:result_list %}">
     <h2>
@@ -16,6 +17,7 @@
     </p>
   </form>
   </div>
+</div>
 </div>
 
 
