--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -106,14 +106,17 @@
 {% if user.is_superuser %}
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Session</h2>
 			<div class="bubble pad-10">
             <p>{{ session }}</p>
 			</div>
         </div>
+        </div>
 
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Device</h2>
 			<div class="bubble pad-10">
             <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
@@ -127,9 +130,11 @@
             <p>{{ browser.devua }}</p>
 			</div>
         </div>
+        </div>
     
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Meta</h2>
 			<div class="bubble pad-10">
             <dl>
@@ -140,12 +145,15 @@
             </dl>
 		    </div>
         </div>
+        </div>
     
         <div class="section">
+        <div class="header">
             <h2>Preferences</h2>
 			<div class="bubble pad-10">
             <p>{{ preferences }}</p>
 			</div>
+        </div>
         </div>        
 {% endif %}
 
