--- a/molly/apps/home/templates/home/messages.html
+++ b/molly/apps/home/templates/home/messages.html
@@ -7,6 +7,7 @@
 
 {% if formset.forms %}
 <div class="section">
+<div class="header">
   <h2>Messages from the developers</h2>
   <div class="note"><div class="bubble pad-10">
     The developers would like to thank you for using Mobile Oxford,
@@ -37,6 +38,7 @@
 
   </ul>
 </div>
+</div>
 
 {% endfor %}
 
@@ -49,10 +51,12 @@
 {% else %}
 
 <div class="section">
+<div class="header">
   <h2>Messages from the developers</h2>
   <div class="note"><div class="bubble pad-10">
     You have no messages
   </div></div>
+</div>
 </div>
 
 {% endif %}
