--- a/demos/molly_oxford/templates/home/index.html
+++ b/demos/molly_oxford/templates/home/index.html
@@ -127,13 +127,16 @@
 {% if user.is_superuser %}
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Session</h2>
 			<div class="bubble pad-10">
             <p>{{ session }}</p>
 			</div>
         </div>
+        </div>
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Device</h2>
 			<div class="bubble pad-10">
             <p>{{ device.brand_name }} {{ device.model_name }} ({{ device.devid }})</p>
@@ -147,8 +150,10 @@
             <p>{{ browser.devua }}</p>
 			</div>
         </div>
+        </div>
         <hr/>
         <div class="section">
+        <div class="header">
             <h2>Meta</h2>
 			<div class="bubble pad-10">
             <dl>
@@ -159,12 +164,15 @@
             </dl>
 		    </div>
         </div>
+        </div>
 
         <div class="section">
+        <div class="header">
             <h2>Preferences</h2>
 			<div class="bubble pad-10">
             <p>{{ preferences }}</p>
 			</div>
+        </div>
         </div>        
 {% endif %}
 
