--- a/molly/apps/z3950/templates/z3950/index.html
+++ b/molly/apps/z3950/templates/z3950/index.html
@@ -7,7 +7,9 @@
 {% include "z3950/search_form.html" %}
 
 <div class="section">
+<div class="header">
     <h2>Library Services Info</h2>
+</div>
     <ul class="link-list">
         <li><a href="{% url places:category-detail "university-library" %}">List of libraries</a></li>
         <li><a href="{% url places:nearby-detail "university-library" %}">Libraries nearby</a></li>
@@ -18,6 +20,7 @@
         <li><a class="external" href="http://solo.bodleian.ox.ac.uk/">SOLO <small>(Search Oxford Libraries Online)</small></a></li>
         <li class="round-bottom"><a class="external" href="http://library.ox.ac.uk/">OLIS <small>(Oxford Library Information System)</small></a></li>
     </ul>
+
 </div>
 
 {% endblock %}
