--- a/molly/apps/z3950/templates/z3950/item_holdings_detail.html
+++ b/molly/apps/z3950/templates/z3950/item_holdings_detail.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <div class="section">
+<div class="header">
     <h2>{{ item.title }}</h2>
+</div>
     <div class="article"><div class="bubble pad-5">
     <table>
 {% if item.author %}
@@ -54,14 +56,17 @@
 {% endif %}
     </table>
     </div></div>
+
 </div>
 
 <div class="section">
+<div class="header">
     <h2>{{ library.location|join:" - " }}</h2>
+</div>
 {% if library.oxpoints_id and library.oxpoints_location %}
     {% render_location_map library.oxpoints_location %}
 {% endif %}
-
+  
     <ul class="content-list">
 {% for book in books %}
     {# non-link-item #}
@@ -70,6 +75,7 @@
     </li>
 {% endfor %}
     </ul>
+
 </div>
 
 {% endblock %}
