fix relative locations due to relocated smart.css in thebigcleanup

--- a/molly/media/site/css/smart.css
+++ b/molly/media/site/css/smart.css
@@ -850,12 +850,12 @@ small {
 
 #favourite, .favourite
 {
-    background-image: url('../../../favourites/png/star-grey.png') !important;
+    background-image: url('../../favourites/png/star-grey.png') !important;
 }
 
 #unfavourite, .unfavourite
 {
-    background-image: url('../../../favourites/png/star.png') !important;
+    background-image: url('../../favourites/png/star.png') !important;
 }
 
 .with-favourite
@@ -906,7 +906,7 @@ small {
 .location-automatic-list li
 {
     padding-left: 35px !important;
-    background-image: url('../../../site/png/location-white.png');
+    background-image: url('../../site/png/location-white.png');
     background-repeat: no-repeat;
     background-position: 5px center;
 }
@@ -986,7 +986,7 @@ small {
     width: 25px !important;
     cursor: pointer !important;
     text-indent:-999em; /* Hack to not show the text on a button when we're showing the image */
-    background-image: url('../../../site/png/location.png') !important;
+    background-image: url('../../site/png/location.png') !important;
     float: right;
     background-position: center center;
     margin-right: 5px;
