Move Oxpoints out of Molly into molly_oxford

--- a/demos/molly_oxford/templates/places/metadata/oxpoints.html
+++ b/demos/molly_oxford/templates/places/metadata/oxpoints.html
@@ -1,4 +1,4 @@
-{% if entity.metadata.oxpoints %}{% load maps %}{% load portal_misc %}{% load molly_external_media_tags %}
+{% if entity.metadata.oxpoints %}{% load maps %}{% load oxpoints %}{% load molly_external_media_tags %}
 
 {% with entity.metadata.oxpoints as oxp %}
 <div class="section">
