--- a/molly/apps/contact/templates/contact/result_list.html
+++ b/molly/apps/contact/templates/contact/result_list.html
@@ -1,6 +1,6 @@
 {# Search form results list #}
 
-{% extends "contact/base.html" %}{% load portal_misc %}
+{% extends "contact/base.html" %}{% load molly_utils %}
 
 {% block title %}Contact search{% if query %}: {{ query }}{% endif %}{% endblock %}
 
