--- a/molly/apps/feeds/templates/rss/events/item_detail.html
+++ b/molly/apps/feeds/templates/rss/events/item_detail.html
@@ -1,4 +1,4 @@
-{% extends "rss/events/base.html" %}{% load maps %}
+{% extends "rss/events/base.html" %}{% load molly_maps %}
 
 {% block breadcrumbs %}
 {{ block.super }}
