--- a/molly/apps/feeds/templates/rss/news/item_list.html
+++ b/molly/apps/feeds/templates/rss/news/item_list.html
@@ -1,4 +1,4 @@
-{% extends "rss/news/base.html" %}{% load portal_misc %}
+{% extends "rss/news/base.html" %}{% load molly_utils %}
 
 {% block breadcrumbs %}
 {{ block.super }}
