--- a/molly/apps/home/templates/home/index.html
+++ b/molly/apps/home/templates/home/index.html
@@ -1,7 +1,6 @@
 {% extends "home/base.html" %}
-{% load molly_utils %}
-{% load molly_apps_weather %}
-{% load portal_misc %}{% load molly_apps_search %}
+{% load molly_weather %}
+{% load molly_utils %}{% load molly_search %}
 
 {% block site_title %}{% endblock %}
 {% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
