--- a/molly/apps/places/templates/places/index.html
+++ b/molly/apps/places/templates/places/index.html
@@ -1,4 +1,4 @@
-{% extends "places/base.html" %}{% load portal_misc %}{% load molly_apps_search %}
+{% extends "places/base.html" %}{% load molly_utils %}{% load molly_search %}
 
 {% block extrahead %}{% include "geolocation/js.html" %}{% endblock extrahead %}
 
