--- a/molly/apps/places/templates/places/metadata/osm.html
+++ b/molly/apps/places/templates/places/metadata/osm.html
@@ -1,4 +1,4 @@
-{% load osm_tags %}{% load portal_misc %}
+{% load molly_osm %}{% load molly_utils %}
 
 {% if entity|osm_tags or entity.metadata.osm.tags.phone or entity.metadata.osm.tags.wikipedia or entity.metadata.osm.tags.url %}
 
