--- a/molly/apps/places/templates/places/service_details.html
+++ b/molly/apps/places/templates/places/service_details.html
@@ -1,5 +1,5 @@
 {% extends "places/base.html" %}
-{% load molly_utils %}{% load maps %}
+{% load molly_utils %}{% load molly_maps %}
 
 {% block content %}
 
