--- a/molly/apps/places/templates/places/update_osm.html
+++ b/molly/apps/places/templates/places/update_osm.html
@@ -1,5 +1,5 @@
 {% extends "places/base.html" %}
-{% load maps %}{% load portal_misc %}
+{% load molly_maps %}{% load molly_utils %}
 
 {% block title %}Update {{ entity.title }}{% endblock %}
 
