--- a/molly/apps/places/templates/places/update_osm_done.html
+++ b/molly/apps/places/templates/places/update_osm_done.html
@@ -1,5 +1,5 @@
 {% extends "places/base.html" %}
-{% load maps %}{% load portal_misc %}
+{% load molly_maps %}{% load molly_utils %}
 
 {% block extrahead %}{{ block.super }}
 <meta name="robots" content="noindex"/>{% endblock %}
