--- a/molly/apps/podcasts/templates/podcasts/category_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/category_detail.html
@@ -1,4 +1,4 @@
-{% extends "podcasts/base.html" %}{% load portal_misc %}{% load molly_external_media_tags %}
+{% extends "podcasts/base.html" %}{% load molly_utils %}{% load molly_external_media %}
 
 {% block content %}
 
