--- a/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/apps/podcasts/templates/podcasts/index.html
@@ -1,5 +1,5 @@
-{% extends "podcasts/base.html" %}{% load molly_apps_search %}
-{% load portal_misc %}
+{% extends "podcasts/base.html" %}{% load molly_search %}
+{% load molly_utils %}
 
 {% block content %}
 
