--- a/molly/apps/podcasts/templates/podcasts/podcast_detail.html
+++ b/molly/apps/podcasts/templates/podcasts/podcast_detail.html
@@ -1,4 +1,4 @@
-{% extends "podcasts/base.html" %}{% load portal_misc %}{% load molly_external_media_tags %}{% load molly_apps_podcasts %}
+{% extends "podcasts/base.html" %}{% load molly_utils %}{% load molly_external_media %}{% load molly_podcasts %}
 
 {% block breadcrumbs %}
 {{ block.super }}
