--- a/molly/apps/sakai/templates/sakai/poll/detail.html
+++ b/molly/apps/sakai/templates/sakai/poll/detail.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load sakai %}{% load molly_utils %}
+{% extends "sakai/base.html" %}{% load molly_sakai %}{% load molly_utils %}
 
 {% block content %}
 
