--- a/molly/apps/sakai/templates/sakai/signup/list.html
+++ b/molly/apps/sakai/templates/sakai/signup/list.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load portal_misc %}
+{% extends "sakai/base.html" %}{% load molly_utils %}
 
 {% block pagetitle %}Meetings{% endblock %}
 
