--- a/molly/apps/transport/templates/transport/index.html
+++ b/molly/apps/transport/templates/transport/index.html
@@ -1,4 +1,4 @@
-{% extends "transport/base.html" %}{% load molly_utils %}{% load portal_misc %}
+{% extends "transport/base.html" %}{% load molly_utils %}
 {% block extrahead %}
 <style type="text/css">
 ul#transport-links{
