--- a/demos/molly_oxford/apps/oxpoints/templates/places/metadata/oxpoints.html
+++ b/demos/molly_oxford/apps/oxpoints/templates/places/metadata/oxpoints.html
@@ -1,4 +1,4 @@
-{% if entity.metadata.oxpoints %}{% load maps %}{% load oxpoints %}{% load molly_external_media_tags %}
+{% if entity.metadata.oxpoints %}{% load oxpoints %}{% load molly_external_media %}
 
 {% with entity.metadata.oxpoints as oxp %}
 <div class="section">
