--- a/molly/apps/feeds/templates/rss/events/item_list.html
+++ b/molly/apps/feeds/templates/rss/events/item_list.html
@@ -1,4 +1,4 @@
-{% extends "rss/events/base.html" %}{% load portal_misc %}
+{% extends "rss/events/base.html" %}{% load molly_utils %}
 
 {% block content %}
 
