--- a/molly/apps/feeds/templates/rss/news/index.html
+++ b/molly/apps/feeds/templates/rss/news/index.html
@@ -1,4 +1,4 @@
-{% extends "rss/news/base.html" %}{% load molly_apps_search %}
+{% extends "rss/news/base.html" %}{% load molly_search %}
 
 {% block content %}
 
