--- a/molly/apps/places/templates/places/nearby_detail.html
+++ b/molly/apps/places/templates/places/nearby_detail.html
@@ -1,4 +1,4 @@
-{% extends "places/base.html" %}{% load maps %}{% load portal_misc %}
+{% extends "places/base.html" %}{% load molly_maps %}{% load molly_utils %}
 
 {% block extrahead %}{{ block.super }}{% if entity %}
 <meta name="robots" content="noindex" />{% endif %}
