--- a/molly/apps/sakai/templates/sakai/signup/detail.html
+++ b/molly/apps/sakai/templates/sakai/signup/detail.html
@@ -1,4 +1,4 @@
-{% extends "sakai/base.html" %}{% load sakai %}{% load portal_misc %}{% load molly_utils %}
+{% extends "sakai/base.html" %}{% load molly_sakai %}{% load molly_utils %}
 
 {% block extrahead %}
 <style type="text/css">
