--- a/molly/templates/base.html
+++ b/molly/templates/base.html
@@ -1,4 +1,4 @@
-{% load portal_misc %}{% load compressed %}<!DOCTYPE HTML>
+{% load molly_utils %}{% load compressed %}<!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB">
 <head>
         <title>{% block site_title %}molly | {% endblock %}{% block title %}{{ breadcrumbs.4 }}{% endblock %}</title>
